force-app/main/default/objects/Case/fields/Convsta_Referent_pedagogique__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Referent_pedagogique__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tuteur emlyon</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>Le contact doit être désigné comme Tuteur EM.</errorMessage>
        <filterItems>
            <field>Contact.Convsta_Tuteur_EM__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$Source.Status</field>
            <operation>equals</operation>
            <value>En cours de signature, Signée, En cours d&apos;évaluation, Validée, Evaluée</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Référent pédagogique)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>