force-app/main/default/objects/Case/fields/convsta_relance_telephonique__c.field-meta.xml
<CustomField>
    <fullName>convsta_relance_telephonique__c</fullName>
    <defaultValue>false</defaultValue>
    <label>relance téléphonique</label>
    <type>Checkbox</type>
</CustomField>