force-app/main/default/objects/Case/fields/Convsta_Responsable_Pedagogique__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Responsable_Pedagogique__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsable Pédagogique</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Convsta_Responsables_Pedagogiques</relationshipName>
    <type>Lookup</type>
</CustomField>