force-app/main/default/objects/Case/fields/Convsta_Role_EMLYON__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Role_EMLYON__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Suiveur GBBA</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>R_le__c.isStageOrSuiveur__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>R_le__c.convsta_suiveur__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>R_le__c</referenceTo>
    <relationshipLabel>suiveur stage</relationshipLabel>
    <relationshipName>SuiveurRequetes</relationshipName>
    <type>Lookup</type>
</CustomField>