force-app/main/default/objects/Case/fields/convsta_Score__c.field-meta.xml
<CustomField>
    <fullName>convsta_Score__c</fullName>
    <formula>CASE(RecordType.DeveloperName, 
&quot;Convsta_Validation_d_experience&quot; , Convsta_Score_proximite__c +  Convsta_Score_Age_Demande__c,
						&quot;Convsta_Demande&quot;, 
  Convsta_Score_Age_Contact__c ,
0 )
						+  Convsta_Score_Competence__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>