force-app/main/default/objects/Case/fields/Convsta_Score_Age_Contact__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Score_Age_Contact__c</fullName>
    <formula>CASE(RecordType.DeveloperName, 
&quot;Convsta_Demande&quot;, 
(IF(DATEVALUE(NOW()) -	DATEVALUE (CreatedDate) &lt; 8, 15, 0	)), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score Age Contact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>