force-app/main/default/objects/Case/fields/Convsta_Score_Age_Demande__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Score_Age_Demande__c</fullName>
    <formula>CASE(RecordType.DeveloperName, 
&quot;Convsta_Validation_d_experience&quot; , 
(IF( DATEVALUE(NOW()) - DATEVALUE(Convsta_Date_Soumission_Demande__c) &lt; 10, 15, 0)), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score Age Demande</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>