force-app/main/default/objects/Case/fields/Convsta_Score_Competence__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Score_Competence__c</fullName>
    <formula>CASE(RecordType.DeveloperName, 
&quot;Convsta_Validation_d_experience&quot; , 
(IF( AND (INCLUDES($User.Programme_de_predilection__c, &apos;PGE&apos;), 
ISPICKVAL (Convsta_Table_des_Regles_Experience_Pro__r.Programme__c,&apos;PGE&apos;)), 15, 0	) + 

IF( AND (INCLUDES($User.Programme_de_predilection__c, &apos;ETD&apos;), 
ISPICKVAL (Convsta_Table_des_Regles_Experience_Pro__r.Programme__c,&apos;ETD&apos;)), 15, 0) + 

IF( AND (INCLUDES($User.Programme_de_predilection__c, &apos;LMM&apos;), 
ISPICKVAL (Convsta_Table_des_Regles_Experience_Pro__r.Programme__c,&apos;LMM&apos;)), 15, 0) + 

IF( AND (INCLUDES($User.Programme_de_predilection__c, &apos;BBA&apos;), 
ISPICKVAL (Convsta_Table_des_Regles_Experience_Pro__r.Programme__c,&apos;BBA&apos;)), 15, 0) + 

IF( AND (INCLUDES($User.Programme_de_predilection__c, &apos;MS&apos;), 
ISPICKVAL (Convsta_Table_des_Regles_Experience_Pro__r.Programme__c,&apos;MS&apos;)), 15, 0)), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score Compétence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>