force-app/main/default/objects/Case/fields/Convsta_Score_proximite__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Score_proximite__c</fullName>
    <formula>CASE(RecordType.DeveloperName, 
&quot;Convsta_Validation_d_experience&quot; , 
(IF( Convsta_DateStart__c - DATEVALUE(NOW()) &lt; 15, 10, 0)), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score proximité</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>