force-app/main/default/objects/Case/fields/Convsta_Send_email_relance_PJ__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Send_email_relance_PJ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send email relance PJ</label>
    <type>Checkbox</type>
</CustomField>