force-app/main/default/objects/Case/fields/Convsta_Signataire_delegue__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Signataire_delegue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Si ce champ est renseigné, c&apos;est ce contact qui signera la convention à la place du tuteur emlyon</inlineHelpText>
    <label>Délégation pour le tuteur école</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Signataire délégué)</relationshipLabel>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>