force-app/main/default/objects/Case/fields/Convsta_Stages_Consecutifs_Meme_Entrepri__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Stages_Consecutifs_Meme_Entrepri__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stages Consécutifs Même Entreprise</label>
    <type>Checkbox</type>
</CustomField>