force-app/main/default/objects/Case/fields/Convsta_Status_Front_Office__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Status_Front_Office__c</fullName>
    <description>Statut de la demande d&apos;expérience professionnelle correspondant Front Office</description>
    <formula>CASE(Status,
&quot;Brouillon en cours de saisie&quot;,
IMAGE(&quot;/internships/resource/GraphicsPackNew/fatcow/farmfresh/16/pencil.png&quot;,&quot;&quot;)+$Label.Convsta_StatusFront_Demande_En_Cours_De_Saisie,
&quot;Brouillon en cours de validation&quot;,
IMAGE(&quot;/internships/resource/GraphicsPackNew/fatcow/farmfresh/16/hourglass.png&quot;,&quot;&quot;)+$Label.Convsta_Case_Status_Front_Office_Brouillon_en_cours_de_validation,
&quot;Demande soumise&quot;,
IMAGE(&quot;/internships/resource/GraphicsPackNew/fatcow/farmfresh/16/hourglass.png&quot;,&quot;&quot;)+$Label.Convsta_StatusFront_Demande_Soumise ,
&quot;Demande en cours de validation pédagogique&quot;,
IMAGE(&quot;/internships/resource/GraphicsPackNew/fatcow/farmfresh/16/hourglass.png&quot;,&quot;&quot;)+$Label.Convsta_StatusFront_Demande_En_Cours_De_Validation ,
&quot;Demande en cours de validation administrative&quot;,
IMAGE(&quot;/internships/resource/GraphicsPackNew/fatcow/farmfresh/16/hourglass.png&quot;,&quot;&quot;)+$Label.Convsta_StatusFront_Demande_En_Cours_De_Validation ,
&quot;Demande validée et en attente de contrat à uploader&quot;, IMAGE(&quot;/resource/1548319764000/GraphicsPackNew/fatcow/farmfresh/16/email.png&quot;,&quot;&quot;)+$Label.Convsta_StatusFront_Demande_Validee_En_Attente_De_Contrat_A_Uploader ,
&quot;Convention en attente de signature&quot;,
IMAGE(&quot;/internships/resource/GraphicsPackNew/fatcow/farmfresh/16/hourglass.png&quot;,&quot;&quot;)+$Label.Convsta_StatusFront_Convention_Emise_Et_Envoyee_Pour_Signature ,
&quot;Convention signée&quot;,
IMAGE(&quot;/internships/resource/GraphicsPackNew/fatcow/farmfresh/16/accept.png&quot;,&quot;&quot;)+$Label.Convsta_StatusFront_Convention_Signee ,
&quot;Demande refusée&quot;,
IMAGE(&quot;/internships/resource/GraphicsPackNew/fatcow/farmfresh/16/cross.png&quot;,&quot;&quot;)+$Label.Convsta_StatusFront_Demande_Refusee ,
&quot;Demande de complément d’information&quot;,
IMAGE(&quot;/internships/resource/GraphicsPackNew/fatcow/farmfresh/16/pencil.png&quot;,&quot;&quot;)+$Label.Convsta_StatusFront_Demande_En_Attente_De_Vos_Corrections ,
&quot;Brouillon annulé&quot;,
IMAGE(&quot;/internships/resource/GraphicsPackNew/fatcow/farmfresh/16/cancel.png&quot;,&quot;&quot;)+$Label.Convsta_StatusFront_Brouillon_Annule ,
&quot;Brouillon expiré&quot;,
IMAGE(&quot;/internships/resource/GraphicsPackNew/fatcow/farmfresh/16/cancel.png&quot;,&quot;&quot;)+TEXT(Status) ,
&quot;Expérience validée&quot;,
IMAGE(&quot;/internships/resource/GraphicsPackNew/fatcow/farmfresh/16/tick.png&quot;,&quot;&quot;)+$Label.Convsta_Case_Status_Front_Office_Experience_Validee,
&quot;Evaluée&quot;, 
IMAGE(&quot;/internships/resource/GraphicsPackNew/fatcow/farmfresh/16/tick.png&quot;,&quot;&quot;)+$Label.Convsta_StatusFront_Evaluee, 
TEXT(Status)+&apos;non géré&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Statut(FO)</label>
    <type>Text</type>
</CustomField>