force-app/main/default/objects/Case/fields/Convsta_Statut_Signature__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Statut_Signature__c</fullName>
    <label>Statut de la signature</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Envoyé</fullName>
            </value>
            <value>
                <fullName>Signée</fullName>
            </value>
            <value>
                <fullName>Convention validée à émettre</fullName>
            </value>
            <value>
                <fullName>Avenant validé à émettre</fullName>
            </value>
            <value>
                <fullName>Erreur génération</fullName>
            </value>
            <value>
                <fullName>Expirée</fullName>
            </value>
            <value>
                <fullName>Annulée</fullName>
            </value>
            <value>
                <fullName>Traité manuellement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>