force-app/main/default/objects/Case/fields/convsta_studentGetConvention__c.field-meta.xml
<CustomField>
    <fullName>convsta_studentGetConvention__c</fullName>
    <formula>IF(
	AND(
		!ISBLANK(Convsta_ConventionDocumentId__c),
		Convsta_Convention__c
	),
	HYPERLINK(
		&apos;/internships/sfc/servlet.shepherd/document/download/&apos;+Convsta_ConventionDocumentId__c+&apos;?operationContext=S1&apos;,
		$Label.convsta_telecharger_ma_convention,
		&apos;_blank&apos;
	),
	IF(
		!ISBLANK(Convsta_ConventionDocumentId__c),
		$Label.convsta_disponible_dans_vos_docs,
		$Label.convsta_pas_disponible
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ma convention</label>
    <type>Text</type>
</CustomField>