force-app/main/default/objects/Case/fields/Convsta_suiveur__c.field-meta.xml
<CustomField>
    <fullName>Convsta_suiveur__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Suiveur</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Requêtes (Suiveur)</relationshipLabel>
    <relationshipName>suiveur</relationshipName>
    <type>Lookup</type>
</CustomField>