force-app/main/default/objects/Case/fields/Convsta_Table_des_Regles_Experience_Pro__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Table_des_Regles_Experience_Pro__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Table des Règles Expérience Pro</label>
    <referenceTo>CONVSTA_Table_Regles_Experience_Pro__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>