force-app/main/default/objects/Case/fields/convsta_Tech_conventionDocId__c.field-meta.xml
<CustomField>
    <fullName>convsta_Tech_conventionDocId__c</fullName>
    <label>convsta_Tech_conventionDocId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>