force-app/main/default/objects/Case/fields/Convsta_Tech_Guard_SendEmail__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Tech_Guard_SendEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Convsta Tech Guard SendEmail</label>
    <type>Checkbox</type>
</CustomField>