force-app/main/default/objects/Case/fields/Convsta_tech_notIsPortaluser__c.field-meta.xml
<CustomField>
    <fullName>Convsta_tech_notIsPortaluser__c</fullName>
    <formula>TEXT($User.UserType) =&apos;Standard&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Convsta_tech_notIsPortaluser</label>
    <type>Checkbox</type>
</CustomField>