force-app/main/default/objects/Case/fields/Convsta_tech_rediger_avenant__c.field-meta.xml
<CustomField>
    <fullName>Convsta_tech_rediger_avenant__c</fullName>
    <label>tech rédiger avenant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Lieu</fullName>
            </value>
            <value>
                <fullName>Gratification</fullName>
            </value>
            <value>
                <fullName>Tuteur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>