force-app/main/default/objects/Case/fields/convsta_techCanSubmit__c.field-meta.xml
<CustomField>
    <fullName>convsta_techCanSubmit__c</fullName>
    <formula>AND( $Profile.Name !=&apos;Responsable Pédagogique&apos; ,(Convsta_tech_notIsPortaluser__c || IF(TEXT( Status )= &apos;Brouillon en cours de saisie&apos;, true, 
			IF(TEXT( Status )=&apos;Demande de complément d’information&apos;, true,
						false))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>techCanSubmit</label>
    <type>Checkbox</type>
</CustomField>