force-app/main/default/objects/Case/fields/convsta_Telecharger_la_convention__c.field-meta.xml
<CustomField>
    <fullName>convsta_Telecharger_la_convention__c</fullName>
    <formula>HYPERLINK(&apos;/apex/Convsta_GenerationConvention?caseId=&apos;&amp;Id , &apos;Ouvrir&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Télécharger la convention</label>
    <type>Text</type>
</CustomField>