force-app/main/default/objects/Case/fields/Convsta_Tuteur__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Tuteur__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Tuteur entreprise</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>