force-app/main/default/objects/Case/fields/Convsta_Type_d_avenant__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Type_d_avenant__c</fullName>
    <label>Type d&apos;avenant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Changement tuteur entreprise</fullName>
            </value>
            <value>
                <fullName>Changement date</fullName>
            </value>
            <value>
                <fullName>Changement gratification</fullName>
            </value>
            <value>
                <fullName>Changement lieu de stage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>