force-app/main/default/objects/Case/fields/Convsta_Type_de_demande__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Type_de_demande__c</fullName>
    <label>Type de demande</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Validation_experience_anterieure</fullName>
                <label>Validation d&apos;expérience antérieure</label>
            </value>
            <value>
                <fullName>Stage</fullName>
            </value>
            <value>
                <fullName>Contrat à venir</fullName>
                <label>Contrat à venir (CDI/CDD/Intérim)</label>
            </value>
            <value>
                <fullName>Besoin d&apos;aide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>