force-app/main/default/objects/Case/fields/Convsta_Type_de_document__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Type_de_document__c</fullName>
    <description>Indique le type de document uploadé</description>
    <label>Type de document uploadé</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Convsta_Types_de_document</valueSetName>
    </valueSet>
</CustomField>