force-app/main/default/objects/Case/fields/Convsta_TypeContrat__c.field-meta.xml
<CustomField>
    <fullName>Convsta_TypeContrat__c</fullName>
    <label>Type Contrat</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Convsta_Type_de_demande__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Convention de stage de l ecole</fullName>
                <label>Convention de stage émise par emlyon business school</label>
            </value>
            <value>
                <fullName>Contrat de travail de l&apos;entreprise</fullName>
                <label>Contrat de travail de l&apos;entreprise (CDD/Intérim)</label>
            </value>
            <value>
                <fullName>VIE</fullName>
                <label>VIE/VIA</label>
            </value>
            <value>
                <fullName>Convention_de_stage</fullName>
                <label>Convention de stage</label>
            </value>
            <value>
                <fullName>Service_civique</fullName>
                <label>Service civique</label>
            </value>
            <value>
                <fullName>Auto_entrepreneur</fullName>
                <label>Auto-entrepreneur/ Création d&apos;entreprise</label>
            </value>
            <value>
                <fullName>Convention de stage de l&apos;entreprise</fullName>
                <label>Convention de stage émise par l&apos;entreprise</label>
            </value>
            <value>
                <fullName>CDI</fullName>
            </value>
            <value>
                <fullName>Alternance</fullName>
                <isActive>false</isActive>
                <label>Alternance</label>
            </value>
            <value>
                <fullName>Contrat local a l etranger</fullName>
                <isActive>false</isActive>
                <label>Contrat local a l etranger</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>