force-app/main/default/objects/Case/fields/Convsta_Utilisateur_etudiant__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Utilisateur_etudiant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Utilisateur étudiant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Exp_pro</relationshipName>
    <type>Lookup</type>
</CustomField>