force-app/main/default/objects/Case/fields/Convsta_Validation_de_l_avenant__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Validation_de_l_avenant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Validation de l&apos;avenant par le Responsable Pédagogique.</description>
    <inlineHelpText>Validation de l&apos;avenant par le Responsable Pédagogique</inlineHelpText>
    <label>Validation de l&apos;avenant</label>
    <type>Checkbox</type>
</CustomField>