force-app/main/default/objects/Case/fields/Convsta_Validation_Pedagogique__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Validation_Pedagogique__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Le Responsable Pédagogique doit cocher cette case lorsque la validation pédagogique est ok</inlineHelpText>
    <label>Validation Pédagogique</label>
    <type>Checkbox</type>
</CustomField>