force-app/main/default/objects/Case/fields/Convsta_Verdict_Administratif__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Verdict_Administratif__c</fullName>
    <description>Permet au gestionnaire de rendre son verdict sur la demande d&apos;expérience professionnelle de l&apos;étudiant.</description>
    <inlineHelpText>Permet au gestionnaire de rendre son verdict sur la demande de l&apos;étudiant</inlineHelpText>
    <label>Verdict Administratif</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demande Acceptée</fullName>
            </value>
            <value>
                <fullName>Demande Rejetée</fullName>
            </value>
            <value>
                <fullName>Précisions Nécessaires</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>