force-app/main/default/objects/Case/fields/Convsta_Verdict_Pedagogique__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Verdict_Pedagogique__c</fullName>
    <label>Verdict Pédagogique</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demande Acceptée</fullName>
            </value>
            <value>
                <fullName>Demande Rejetée</fullName>
            </value>
            <value>
                <fullName>Précisions Nécessaires</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>