force-app/main/default/objects/Case/fields/convstatech_Avancement_validation_exp__c.field-meta.xml
<CustomField>
    <fullName>convstatech_Avancement_validation_exp__c</fullName>
    <formula>CASE(Status,
					&quot;Brouillon en cours de saisie&quot;,&quot;1&quot;,
					&quot;Brouillon en cours de validation&quot;, &quot;2&quot;,
				 &quot;Demande soumise&quot;,  &quot;3&quot; ,
					&quot;Demande en cours de validation pédagogique&quot;,  &quot;4&quot; ,
					&quot;Demande en cours de validation administrative&quot;, &quot;4&quot;,
					&quot;Demande validée et en attente de contrat à uploader&quot;,  &quot;5&quot; ,
					&quot;Convention en attente de signature&quot;,  &quot;6&quot;,
					&quot;Convention signée&quot;,  &quot;7&quot; ,
					&quot;Demande refusée&quot;,  &quot;0&quot; ,
					&quot;Demande de complément d’information&quot;, &quot;9&quot; ,						
					&quot;Brouillon annulé&quot;,  &quot;0&quot; ,
     &quot;Expérience validée&quot;, &quot;7&quot;, 
					&quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>tech Avancement validation expérience</label>
    <type>Text</type>
</CustomField>