force-app/main/default/objects/Case/fields/convta_Duree_validation_convention__c.field-meta.xml
<CustomField>
    <fullName>convta_Duree_validation_convention__c</fullName>
    <formula>Convsta_Date_Validation_Administrative__c - Convsta_Date_Soumission_Demande__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Durée validation convention</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>