force-app/main/default/objects/Case/fields/Date_Assignation_RP__c.field-meta.xml
<CustomField>
    <fullName>Date_Assignation_RP__c</fullName>
    <inlineHelpText>La date à laquelle la demande de l&apos;étudiant a été assignée au RP</inlineHelpText>
    <label>Assignation au RP</label>
    <type>DateTime</type>
</CustomField>