force-app/main/default/objects/Case/fields/Date_Reception_Convention__c.field-meta.xml
<CustomField>
    <fullName>Date_Reception_Convention__c</fullName>
    <inlineHelpText>La date à laquelle la convention de l&apos;étudiant envoyée par l&apos;entreprise a été reçue par l&apos;emlyon</inlineHelpText>
    <label>Réception de la Convention</label>
    <type>DateTime</type>
</CustomField>