force-app/main/default/objects/Case/fields/Explications_pedagogiques__c.field-meta.xml
<CustomField>
    <fullName>Explications_pedagogiques__c</fullName>
    <description>Le Responsable pédagogique doit expliquer à l&apos;étudiant les précisions qu&apos;il attend de sa part afin de pouvoir valider sa demande d&apos;expérience professionnelle ou la raison pour laquelle sa demande n&apos;a pas été validée.</description>
    <inlineHelpText>Le Responsable pédagogique doit expliquer à l&apos;étudiant les précisions qu&apos;il attend de sa part afin de pouvoir valider sa demande d&apos;expérience professionnelle ou la raison pour laquelle sa demande n&apos;a pas été validée.</inlineHelpText>
    <label>Explications</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>