force-app/main/default/objects/Case/fields/hed__Location__c.field-meta.xml
<CustomField>
    <fullName>hed__Location__c</fullName>
    <description>The location where the Case took place.</description>
    <inlineHelpText>L’endroit où la requête a eu lieu.</inlineHelpText>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Off Campus</fullName>
            </value>
            <value>
                <fullName>On Campus</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>