force-app/main/default/objects/Case/fields/hed__Occurrence_Date__c.field-meta.xml
<CustomField>
    <fullName>hed__Occurrence_Date__c</fullName>
    <description>The date and time when the behavior event that triggered the Case occurred.</description>
    <inlineHelpText>La date et l’heure d’occurrence de l’événement lié au comportement qui a déclenché la requête.</inlineHelpText>
    <label>Occurrence Date</label>
    <type>DateTime</type>
</CustomField>