force-app/main/default/objects/Case/fields/Responsable_administratif_entreprise__c.field-meta.xml
<CustomField>
    <fullName>Responsable_administratif_entreprise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsable administratif entreprise</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Responsable administratif entreprise)</relationshipLabel>
    <relationshipName>convsta_stages_responsable_entreprise</relationshipName>
    <type>Lookup</type>
</CustomField>