force-app/main/default/objects/Case/fields/TECH_email_tuteur_entreprise__c.field-meta.xml
<CustomField>
    <fullName>TECH_email_tuteur_entreprise__c</fullName>
    <description>Copie l&apos;email du tuteur entreprise (objet Contact) dans l&apos;objet Requête. Principalement utilisé pour les rapports.</description>
    <formula>Convsta_Tuteur__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH email tuteur entreprise</label>
    <type>Text</type>
</CustomField>