force-app/main/default/objects/Case/fields/TECH_Fonction_du_tuteur_entreprise__c.field-meta.xml
<CustomField>
    <fullName>TECH_Fonction_du_tuteur_entreprise__c</fullName>
    <description>Copie la fonction du tuteur entreprise (objet Contact) dans l&apos;objet Requête. Principalement utilisé pour les rapports.</description>
    <formula>Convsta_Tuteur__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Fonction du tuteur entreprise</label>
    <type>Text</type>
</CustomField>