force-app/main/default/objects/Case/fields/TECH_T_l_phone_tuteur_entreprise__c.field-meta.xml
<CustomField>
    <fullName>TECH_T_l_phone_tuteur_entreprise__c</fullName>
    <description>Copie le numéro de téléphone du tuteur entreprise (objet Contact) dans l&apos;objet Requête. Principalement utilisé pour les rapports.</description>
    <formula>Convsta_Tuteur__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Téléphone tuteur entreprise</label>
    <type>Text</type>
</CustomField>