force-app/main/default/objects/Case/recordTypes/Convsta_Avenant.recordType-meta.xml
<RecordType>
    <fullName>Convsta_Avenant</fullName>
    <active>true</active>
    <businessProcess>Convsta_Avenant</businessProcess>
    <label>Avenant</label>
</RecordType>