force-app/main/default/objects/Case/recordTypes/Convsta_Demande.recordType-meta.xml
<RecordType>
    <fullName>Convsta_Demande</fullName>
    <active>true</active>
    <businessProcess>Convsta_Demande</businessProcess>
    <label>Demande</label>
</RecordType>