force-app/main/default/objects/Case/recordTypes/Convsta_Validation_d_experience.recordType-meta.xml
<RecordType>
    <fullName>Convsta_Validation_d_experience</fullName>
    <active>true</active>
    <businessProcess>Convsta_Validation_Expérience</businessProcess>
    <label>Validation d&apos;expérience</label>
</RecordType>