force-app/main/default/objects/Case/recordTypes/Incident.recordType-meta.xml
<RecordType>
    <fullName>Incident</fullName>
    <active>true</active>
    <businessProcess>Behavior Management</businessProcess>
    <description>An event that’s being tracked by this Case.</description>
    <label>Incident</label>
</RecordType>